# face_recognition

./: .gitignore  Makefile  README.md
src/: CMakeLists.txt  calc.h  check_attendance.cpp  check_attendance2.cpp  cluster.cpp  crop.cpp  crop.cpp.backup  crop_face_img.cpp  crop_face_img.h  extract_vector.cpp  head_track.cpp  read for cluster.cpp.txt  test_desc.cpp  test_vector.cpp  tracking.cpp  transpose_vector.cpp  transpose_vector.h
src/sample/: 0001-01.txt  0001-02.txt  0001-03.txt  0001-04.txt  0001-05.txt  0001-06.txt  0001-07.txt  0001-08.txt  0001-09.txt  0002-01.txt  0002-02.txt  0002-03.txt  0002-04.txt  0002-05.txt  0002-06.txt  0002-07.txt  0003-01.txt  0003-02.txt  0003-03.txt  0004-01.txt  0004-02.txt  0004-03.txt  0004-04.txt  0004-05.txt  0004-06.txt  0004-07.txt  0005-01.txt  0005-02.txt  0005-03.txt  0005-04.txt  0005-05.txt  0005-06.txt  0005-07.txt  0005-08.txt  0005-09.txt  0006-01.txt  0006-02.txt  0006-03.txt  0006-04.txt  0006-05.txt  (+65 more)
src/sample/000000001/: 000000001-01.txt  000000001-02.txt  000000001-08.txt  000000001-09.txt  000000001-11.txt
src/sample/000000002/: 000000002-02.txt  000000002-04.txt  000000002-05.txt  000000002-06.txt  000000002-07.txt  000000002-10.txt
src/sample/000000003/: 000000003-01.txt  000000003-03.txt  000000003-05.txt
src/sample/000000004/: 000000004-01.txt  000000004-02.txt  000000004-03.txt  000000004-04.txt  000000004-05.txt  000000004-06.txt  000000004-07.txt  000000004-08.txt  000000004-09.txt  000000004-10.txt
src/sample/000000005/: 000000005-01.txt  000000005-02.txt  000000005-03.txt  7.txt
src/sample/000000006/: 000000006-04.txt  000000006-06.txt  (+4 more)
(+80 files in other folders)
